# 2.4-nlp-deployment

./: README.md  app.py  nlp.ipynb  pyproject.toml
