[tool.poetry]
name = "2-4 nlp-deployment"
version = "1.0.0"
description = ""
authors = ["erwincarlogonzales <erwincarlogonzales@gmail.com>"]
readme = "README.md"
packages = [{include = "2"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
