[tool.poetry]
name = "2-4 nlp-deployment"
version = "1.0.0"
description = ""
authors = ["erwincarlogonzales <erwincarlogonzales@gmail.com>"]
readme = "README.md"
packages = [{include = "2"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nltk = "^3.9.1"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
